# LWphotorates

./: .gitignore  H2.py  H2p.py  HM.py  README.md  __init__.py  default.mplstyle  general_tests.ipynb  pyproject.toml  quick_tests.ipynb  resolution_tests_results.txt  setup.py  tests.ipynb  utils.py  yggdrasil_converter.ipynb
LWphotorates/: H2.py  HM.py
LWphotorates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LWphotorates/inputdata/H2/excitedstates/: Bp.hdf5  Bprime.hdf5  Bprime.txt  Cm.txt  Cp.hdf5  Cp.txt  Dm.hdf5  Dp.hdf5  OLD_Bp_Abgrall+2000.txt  OLD_allstates_Abgrall+2000.txt  continuum_Bp.hdf5  continuum_Bprime.txt  continuum_Cm.hdf5  continuum_Cp.hdf5  continuum_Dm.hdf5  continuum_Dm.txt  (+1 more)
LWphotorates/inputdata/H2p/: Xen.txt  Xen_order.txt
LWphotorates/inputdata/HM/: sigma_Wishart1979.txt
LWphotorates/inputdata/example_spectra/: description.txt
LWphotorates/inputdata/test_rates/: test_rates_initial_status.h5
LWphotorates/stellar_spectra/: __init__.py  utils.py
inputdata/H2/Xgroundstate/: vibrotXenergy_Komasa+2011.txt
inputdata/H2/excitedstates/: Bp.txt  Cm.hdf5  Dm.txt  Dp.txt  OLD_Cp_Abgrall+2000.txt  continuum_Bp.txt  continuum_Bprime.hdf5  continuum_Cm.txt  continuum_Cp.txt  continuum_Dp.hdf5
inputdata/H2/transitions/: Bp_Abgrall+1994.hdf5  Bp_Abgrall+1994.txt  Bp_Salumbides+2015.hdf5  Bp_Ubachs+2019.hdf5  Bp_Ubachs+2019.txt  Bprime_Abgrall+1994.hdf5  Cm_Abgrall+1994.hdf5  Cm_Salumbides+2015.hdf5  Cp_Abgrall+1994.txt  Cp_Salumbides+2015.hdf5  Cp_Salumbides+2015.txt  Dm_Abgrall+1994.hdf5
inputdata/example_spectra/: exampleSlug.txt
(+86 files in other folders)
